--- a/wikAPIdia-mapper/pom.xml
+++ b/wikAPIdia-mapper/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>jung-algorithms</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
