Small change for testing purposes

--- a/wikAPIdia-core/src/main/resources/reference.conf
+++ b/wikAPIdia-core/src/main/resources/reference.conf
@@ -225,6 +225,13 @@ mapper : {
         algorithmId : 1
         localPageDao : sql
     }
+    conceptualign :{
+        type: conceptualign
+        algorithmId : 2
+        localPageDao : sql
+        voteRatio : 0.5
+        maxVotes : 1
+    }
 }
 
 sr : {
